Fix IE layout issue with sidebar
svn commit r33455

--- a/themes/aov/www/styles/theme.css
+++ b/themes/aov/www/styles/theme.css
@@ -21,10 +21,6 @@ body {
 	top: 150px;
 }
 
-#bd {
-	position: static;
-}
-
 /* }}} */
 /* {{{ Links */
 
